<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBackArrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp"
                android:background="@drawable/ic_back" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:background="@drawable/ic_check"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvAddBuyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#018ED4"
                android:padding="15sp"
                android:paddingStart="100dp"
                android:textStyle="bold"
                android:text="Add Buyer"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/etOrganizationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddBuyer"
                android:background="#028FD6"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:hint="Organization Name"
                android:padding="50dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="Customer Name"
                android:textColor="#C4C4C4"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/ivPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCustomerName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_contacts" />

            <EditText
                android:id="@+id/etCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCustomerName"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ivPerson" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="Mobile Number"
                android:textColor="#C4C4C4"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMobileNumber"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_phone" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMobileNumber"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ivPhone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="Address"
                android:textColor="#C4C4C4"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/ivAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_location" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ivAddress" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="#C4C4C4"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ivEmail" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTaxId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/tax_id"
                android:textColor="#C4C4C4"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivTaxId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTaxId"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_calculator" />

            <EditText
                android:id="@+id/etTaxId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTaxId"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ivTaxId" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCompanyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/company_id"
                android:textColor="#C4C4C4"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivCompanyId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCompanyId"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_fingerprint" />

            <EditText
                android:id="@+id/etCompanyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCompanyId"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ivCompanyId" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>